--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/Project_Winkelmand/nbproject/private/
+Project_Winkelmand/nbproject/project.xml
+Project_Winkelmand/nbproject/project.properties
